--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Run pre-commit
         run: |
-          pre-commit run --all-files
-          
+          uv run pre-commit run --all-files
+
       - name: Run Testing
         run: |
           uv run pytest
