--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,9 @@ repos:
         args: [ --fix ]
       # Run the formatter.
       - id: ruff-format
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    # mypy version
+    rev: v1.14.1
+    hooks:
+    - id: mypy
+      args: [--strict, --ignore-missing-imports]
