--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -2,13 +2,11 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Project CI File
-
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-
+    branches: ["main"]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,24 +19,27 @@ jobs:
     name: python
     steps:
       - uses: actions/checkout@v4
-    
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           version: "0.5.26"
-
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          
       - name: Install the project
         run: uv sync --all-extras --dev
-
       - name: Run pre-commit
         run: |
           uv run pre-commit run --all-files
-
       - name: Run Testing
         run: |
           uv run pytest
+      - name: Build Project
+        run: |
+          uv build
+      - name: Publish to TestPyPI
+        env:
+          UV_PUBLISH_TOKEN: ${{secrets.TESTPYPI_TOKEN}}
+        run: |-
+          uv publish --publish-url "https://test.pypi.org/legacy/"
