--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.14.0
+    hooks:
+      - id: yamlfmt
   - repo: https://github.com/astral-sh/uv-pre-commit
     # uv version.
     rev: 0.5.26
@@ -10,12 +14,12 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [ --fix ]
+        args: [--fix]
       # Run the formatter.
       - id: ruff-format
   - repo: https://github.com/pre-commit/mirrors-mypy
     # mypy version
     rev: v1.14.1
     hooks:
-    - id: mypy
-      args: [--strict, --ignore-missing-imports]
+      - id: mypy
+        args: [--strict, --ignore-missing-imports]
