--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -38,8 +38,8 @@ jobs:
           uv lock
       - name: Publish to TestPyPI
         env:
-          UV_PUBLISH_URL: "https://test.pypi.org/legacy/"
-          UV_PUBLISH_USERNAME: "__token__"
+          UV_PUBLISH_URL: https://test.pypi.org/legacy/
+          UV_PUBLISH_USERNAME: __token__
           UV_PUBLISH_PASSWORD: ${{ secrets.TESTPYPI_TOKEN }}
         run: |
           uv publish
