--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -5,8 +5,12 @@ name: Project CI File
 on:
   push:
     branches: ["main"]
+    tags:
+      - 'v*.*.*'  # Trigger on version tags like v0.4.5
   pull_request:
     branches: ["main"]
+  workflow_dispatch:  # Allow manual triggering
+
 jobs:
   build:
     environment: CI Environment
@@ -16,30 +20,47 @@ jobs:
     name: python
     steps:
       - uses: actions/checkout@v4
+
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           version: "0.5.26"
+    
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version-file: "pyproject.toml"
+      
       - name: Install the project
         run: uv sync --all-extras --dev
+      
       - name: Run pre-commit
         run: |
           uv run pre-commit run --all-files
+
       - name: Run Testing
         run: |
           uv run pytest
+
       - name: Build Project
         run: |
           uv build
           uv lock
+
       - name: Publish to TestPyPI
         env:
           UV_PUBLISH_URL: https://test.pypi.org/legacy/
           UV_PUBLISH_USERNAME: __token__
           UV_PUBLISH_PASSWORD: ${{ secrets.TESTPYPI_TOKEN }}
+        run: |
+          uv publish
+      
+      # Publish to PyPI when a version tag is pushed
+      - name: Publish to PyPI
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          UV_PUBLISH_URL: https://upload.pypi.org/legacy/
+          UV_PUBLISH_USERNAME: __token__
+          UV_PUBLISH_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
           uv publish
