--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = [ "hatchling>=1.0.0",]
 build-backend = "hatchling.build"
 
 [project]
-name = "orderbook"
+name = "pyorderbook"
 version = "v0.4.4"
 description = "Order Book and Matching Engine"
-keywords = [ "orderbook", "order book", "limit order book", "matching engine",]
+keywords = [ "orderbook","pyorderbook", "order book", "limit order book", "matching engine",]
 readme = "README.md"
 requires-python = ">=3.11"
 [[project.authors]]
@@ -39,5 +39,5 @@ ignore = []
 fixable = [ "ALL",]
 
 [tool.hatch.build.targets.wheel]
-packages = [ "orderbook",]
-include = [ "orderbook/*.py", "test/*.py",]
+packages = [ "pyorderbook",]
+include = [ "pyorderbook/*.py", "test/*.py",]
