--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,12 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pyorderbook"
-version = "v0.4.5"
+version = "v0.4.6"
 description = "Order Book and Matching Engine"
 keywords = [ "orderbook", "pyorderbook", "order book", "limit order book", "matching engine",]
 readme = "README.md"
 requires-python = ">=3.11"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
 [[project.authors]]
 name = "Zach Khorozian"
 email = "zkhorozianbc@gmail.com"
