--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -7,6 +7,7 @@ on:
     branches: ["main"]
     tags:
       - 'v*.*.*' # Trigger on version tags like v0.4.5
+      - 'test-v*.*.*' # TestPyPI releases
   pull_request:
     branches: ["main"]
   workflow_dispatch: # Allow manual triggering
